--- a/contato.html
+++ b/contato.html
@@ -6,11 +6,11 @@
 
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/style.css">
+        <body>
     </head>
-    <body>
         <header>
             <div class="caixa">
-                <h1><img src="/imagens/logo.png" alt=""></h1>
+                <h1><img src="/imagens/logo.png" alt="Logo da Barbearia Alura"></h1>
                 
                 <nav>
                     <ul>
@@ -25,19 +25,19 @@
         <main>
             <form>
                 <label for="nomesobrenome">Nome e Sobrenome</label>
-                <input type="text" id="nomesobrenome" class="input-padrao">
+                <input type="text" id="nomesobrenome" class="input-padrao" required>
 
                 <label for="email">Email</label>
-                <input type="text" id="email" class="input-padrao">
+                <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
                 <label for="telefone">Telefone</label>
-                <input type="text" id="telefone" class="input-padrao">
+                <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) X XXXX-XXXX">
 
                 <label for="mensagem">Mensagem</label>
-                <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
+                <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required   ></textarea>
 
-                <div>
-                    <p>Como prefere o nosso contato?</p>
+                <fieldset>
+                    <legend>Como prefere o nosso contato?</legend>
                     <label for="radio-email"><input type="radio" name="contato" value="email" 
                     id="radio-email">Email</label>
 
@@ -45,25 +45,25 @@
                     id="radio-telefone">Telefone</label>
 
                     <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" 
-                    id="radio-whatsapp">Whatsapp</label>
-                </div>
+                    id="radio-whatsapp" checked>Whatsapp</label>
+                </fieldset>
 
-                <div>
-                    <p>Qual horário prefere ser atendido?</p>
+                <fieldset>
+                    <legend>Qual horário prefere ser atendido?</legend>
                     <select>
                         <option>Manhã</option>
                         <option>Tarde</option>
                         <option>Noite</option>
                     </select>
-                </div>
+                </fieldset>
 
-                <label class="checkbox"><input type="checkbox"> Gostaria de receber nossas novidades por e-mail?</label>
+                <label class="checkbox"><input type="checkbox" checked> Gostaria de receber nossas novidades por e-mail?</label>
                 <input type="submit" value="Enviar formulário">
             </form>
         </main>
 
         <footer>
-            <img src="/imagens/logo-branco.png">
+            <img src="/imagens/logo-branco.png" alt="Logo da Barbearia Alura ">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
         </footer>
     </body>
